# T_Shell

./: .gitignore  AGENTS.md  CMakeLists.txt  LICENSE  README.md  vcpkg.json
include/: commands.hpp  executable_cache.hpp  execute.hpp  lexer.hpp  parse.hpp  reader.hpp  redirect.hpp  types.hpp  utils.hpp
src/: commands.cpp  executable_cache.cpp  execute.cpp  lexer.cpp  main.cpp  parse.cpp  reader.cpp  redirect.cpp  utils.cpp
